--- a/Farm-logistics/Request/requestForm.css
+++ b/Farm-logistics/Request/requestForm.css
@@ -6,6 +6,10 @@ body {
     text-align: center;
 }
 
+h1 {
+    color: #ffffff;
+}
+
 /* Styling the Form (Color, Padding, Shadow) */
 form {
     background-color: #fff;
@@ -51,12 +55,15 @@ form {
 /* Styling Button */
 button {
     background-color: #05c46b;
-    border: 1px solid #777;
-    border-radius: 2px;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
     font-family: inherit;
     font-size: 21px;
     display: block;
     width: 100%;
     margin-top: 50px;
     margin-bottom: 20px;
+    padding: 10px 15px;
+    cursor: pointer;
 }
