--- a/Farm-logistics/profile.css
+++ b/Farm-logistics/profile.css
@@ -3,7 +3,8 @@
 
 /*=============== VARIABLES CSS ===============*/
 :root {
-  --header-height: 3.5rem; /*56px*/
+  --header-height: 3.5rem;
+  /*56px*/
 
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
@@ -61,103 +62,109 @@
 }
 
 /*=============== BASE ===============*/
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
 body,
 button,
 input,
-textarea{
+textarea {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
- 
-body{
+
+body {
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
-  color: var(--text-color); 
+  color: var(--text-color);
 }
 
-button{
+button {
   cursor: pointer;
   border: none;
   outline: none;
 }
 
-h1,h2,h3{
+
+
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
 }
- 
 
-.nav__btns{
+
+.nav__btns {
   display: inline-flex;
   align-items: center;
   column-gap: 1rem;
 }
 
- 
+
 /*=============== REUSABLE CSS CLASSES ===============*/
- 
-.container{
+
+.container {
   max-width: 968px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
 
- 
 
-.main{
-  overflow: hidden; /*For animation*/
+
+.main {
+  overflow: hidden;
+  /*For animation*/
 }
 
 /*=============== HEADER ===============*/
-.header{
+.header {
   width: 100%;
   background-color: hsl(var(--hue), 24%, 97%);
   position: fixed;
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  transition: .4s; /*For animation dark mode*/
+  transition: .4s;
+  /*For animation dark mode*/
 }
 
 /*=============== NAV ===============*/
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
- 
- 
+
+
 .nav__toggle,
-.nav__close{
+.nav__close {
   color: var(--title-color);
 }
 
-.nav__logo{
+.nav__logo {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: -1px;
@@ -168,25 +175,25 @@ img{
 }
 
 .nav__logo img {
-  width: 80px; 
+  width: 80px;
 }
 
- 
 
-.nav__toggle{ 
-    position: absolute;
-    top: 1rem;
-    right: 1.25rem; 
-    font-size: 1.25rem;
-    cursor: pointer;
+
+.nav__toggle {
+  position: absolute;
+  top: 1rem;
+  right: 1.25rem;
+  font-size: 1.25rem;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 1400px){
-  .nav__menu{
+@media screen and (max-width: 1400px) {
+  .nav__menu {
     position: fixed;
     background-color: var(--container-color);
-    width: 15rem; 
-    margin: 3.5rem 2rem 0 0; 
+    width: 15rem;
+    margin: 3.5rem 2rem 0 0;
     text-align: center;
     height: auto;
     top: 0;
@@ -200,79 +207,79 @@ img{
 }
 
 
-.nav__close{
+.nav__close {
   font-size: 1.5rem;
   position: absolute;
   top: 1rem;
-  right: .75rem; 
+  right: .75rem;
   cursor: pointer;
 }
 
-.nav__list{
+.nav__list {
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
 }
 
-.nav__link{
+.nav__link {
   color: var(--title-color);
   font-weight: var(--font-medium);
   transition: .3s;
 }
 
-.nav__link:hover{
+.nav__link:hover {
   color: var(--first-color);
 }
 
 /*=============== BUTTONS ===============*/
-.button{
-    display: inline-block;
-    background-color: var(--first-color);
-    color: #FFF;
-    padding: 1rem 1.75rem;
-    border-radius: .5rem;
-    font-weight: var(--font-medium);
-    transition: .3s;
-  }
-  
-  .button:hover,
-  .button-log:hover{
-    background-color: var(--first-color-alt);
-  }
-  
-  .button__icon{
-    transition: .3s;
-  }
-  
-  .button:hover  {
-    transform: translateX(.25rem);
-  }
-  
-  .button--flex{
-    display: inline-flex;
-    align-items: center;
-    column-gap: .5rem;
-  }
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #FFF;
+  padding: 1rem 1.75rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+  transition: .3s;
+}
+
+.button:hover,
+.button-log:hover {
+  background-color: var(--first-color-alt);
+}
+
+.button__icon {
+  transition: .3s;
+}
+
+.button:hover {
+  transform: translateX(.25rem);
+}
+
+.button--flex {
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+}
 
 
 
 /* Show menu */
-.show-menu{
+.show-menu {
   right: 0;
 }
 
 /* Change background header */
-.scroll-header{
+.scroll-header {
   box-shadow: 0 1px 4px hsla(var(--hue), 4%, 15%, .1);
 }
 
 /* Active link */
-.active-link{
+.active-link {
   position: relative;
   color: var(--first-color);
 }
 
-.active-link::after{
+.active-link::after {
   content: '';
   position: absolute;
   bottom: -.5rem;
@@ -281,7 +288,7 @@ img{
   height: 2px;
   background-color: var(--first-color);
 }
- 
+
 
 
 
@@ -294,16 +301,19 @@ img{
   margin: 0 10px;
 }
 
-.button__details {
+.main .button__details {
   text-align: center;
 }
+
+
+
 
 /* .main__btn {
   background: rgba(226, 157, 28, 0.897);
 } */
 
 
-.footer__copy{
+.footer__copy {
   text-align: center;
   font-size: var(--smaller-font-size);
   color: var(--text-color-light);
@@ -311,7 +321,7 @@ img{
 }
 
 /*=============== SCROLL UP ===============*/
-.scrollup{
+.scrollup {
   position: fixed;
   background-color: var(--first-color);
   right: 1rem;
@@ -324,56 +334,47 @@ img{
   transition: .4s;
 }
 
-.scrollup__icon{
+.scrollup__icon {
   font-size: 1rem;
   color: #FFF;
 }
 
-.scrollup:hover{
+.scrollup:hover {
   background-color: var(--first-color-alt);
   opacity: 1;
 }
 
 /* Show Scroll Up*/
-.show-scroll{
+.show-scroll {
   bottom: 3rem;
 }
 
 /*=============== SCROLL BAR ===============*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: .6rem;
   background: hsl(var(--hue), 4%, 53%);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: hsl(var(--hue), 4%, 29%);
   border-radius: .5rem;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (max-width: 320px){
-   
-}
+@media screen and (max-width: 320px) {}
 
 /* For medium devices */
-@media screen and (min-width: 576px){
-   
-  
-}
+@media screen and (min-width: 576px) {}
 
-@media screen and (min-width: 767px){
-  
-}
+@media screen and (min-width: 767px) {}
 
 /* For large devices */
-@media screen and (min-width: 992px){
-   
-  .footer__copy{
+@media screen and (min-width: 992px) {
+
+  .footer__copy {
     margin: 7rem 0 2rem;
   }
 }
 
-@media screen and (min-width: 1200px){
-  
-}
+@media screen and (min-width: 1200px) {}
