--- a/Farm-logistics/Request/checkout.css
+++ b/Farm-logistics/Request/checkout.css
@@ -110,7 +110,7 @@ button {
 
 /*credit card*/
 .card {
-    background-image: linear-gradient(to bottom, #0e7c0b, #27bd40, #89f3a4, #6eb99a, #c2f5ce);
+    background-image: linear-gradient(to bottom, #0e7c0b, #1e8b31, #2bac4b, #54d87c, #94eba8);
     position: fixed;
     right: 70%;
     top: 25%;
@@ -118,7 +118,7 @@ button {
 
     width: 300px;
     height: 200px;
-    box-shadow: 8px 10px 0px 1px #cedbff;
+    box-shadow: 8px 10px 0px 1px #d1f5d0;
     border-radius: 10px;
     font-family: 'Montserrat Thin';
     border: 2px solid #011b09;
